Fixing spacing beneath captions on article pages.

--- a/sites/all/themes/indypendent/style.css
+++ b/sites/all/themes/indypendent/style.css
@@ -881,7 +881,7 @@ p, ul, h1, h2, h3, h4, h5, h6 {
 #pre-content .view-pre-article .views-field-field-feature-image {
   float: left;
   width: 400px;
-  height: 250px;
+  min-height: 250px;
 }
 
 #pre-content .view-pre-article .views-field-field-feature-image .feature-caption {
